# exemplo_vector_image_search

./: README.md  exemplo_vector_image_search.ipynb  organiza_base.ipynb  pyproject.toml  vector_search_app.py
